[package]
name = "jsonrpc-client"
version = "0.1.3"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"
description = "An asynchronous JSON-RPC client library, which supports HTTP and WebSocket"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/koushiro/async-jsonrpc-client-rs"
keywords = ["async", "jsonrpc", "client"]

[dependencies]
async-trait = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
surf = { version = "2.1", default-features = false, features = ["h1-client"] }
anyhow = { version = "1" }

[dev-dependencies]
env_logger = "0.7"
async-std = { version = "1.8", features = ["attributes"] }
