[package]
name = "async-jsonrpc-client"
version = "0.1.3"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"
description = "An asynchronous JSON-RPC client library, which supports HTTP and WebSocket"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/koushiro/async-jsonrpc-client-rs"
keywords = ["async", "jsonrpc", "client"]

[features]
default = ["http-reqwest", "ws"]
http-reqwest = ["reqwest"]
http-surf = ["surf", "anyhow"]
ws = ["async-tungstenite", "parking_lot", "tokio"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# HTTP (reqwest)
reqwest = { version = "0.10", features = ["json"], optional = true }

# HTTP (async-std)
surf = { version = "2.1", optional = true, default-features = false, features = ["h1-client"] }
anyhow = { version = "1.0", optional = true }

# WebSocket
async-tungstenite = { version = "0.8", features = ["tokio-runtime"], optional = true }
parking_lot = { version = "0.11.1", optional = true }
tokio = { version = "1.0.1", features = ["macros"], optional = true }

[dev-dependencies]
env_logger = "0.8.2"
async-std = { version = "1.8.0", features = ["attributes"] }

[[example]]
name = "http_reqwest"
path = "examples/http_reqwest.rs"
required-features = ["http-reqwest"]

[[example]]
name = "http_surf"
path = "examples/http_surf.rs"
required-features = ["http-surf"]

[[example]]
name = "ws"
path = "examples/ws.rs"
required-features = ["ws"]
