[package]
name = "async-jsonrpc-server"
version = "0.0.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-jsonrpc-server"
repository = "https://github.com/koushiro/async-jsonrpc"
description = "An asynchronous JSON-RPC 2.0 server library"
keywords = ["jsonrpc", "rpc", "async", "server"]
categories = ["network-programming", "web-programming"]

[dependencies]
