[package]
name = "jsonrpc-types"
version = "0.3.3"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/jsonrpc-types"
repository = "https://github.com/koushiro/async-jsonrpc"
description = "A set of types for representing JSON-RPC requests and responses."
keywords = ["jsonrpc", "rpc", "types"]
categories = ["network-programming", "web-programming"]

[features]
default = ["v2"]
v1 = []
v2 = []

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg doc_cfg"
# To build locally: cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
